fixed bugs and made the whole thing working

--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -249,7 +249,7 @@ La ferme des 3 chênes: Analytics
     <br><br>
         <ul>
             <li style="list-style: none;">
-                <p class="explication" style="text-align: center;"> <strong>Chaque graphe a une utilité particulière. Afin de vous aider dans l'exploitation et la compréhension de ceux-ci, en voilà quelques explications.</strong></p>
+                <p class="explication" style="text-align: center;"> <strong>Chaque graphe a une utilité particulière. Afin de vous aider dans l'exploitation et la compréhension de ceux-ci, en voilà quelques explications:</strong></p>
             </li>
         </ul>
             <br><br>
@@ -258,7 +258,7 @@ La ferme des 3 chênes: Analytics
             <br>
                 <p class="para_explication" style="text-align: justify;"> Le graphe "Vêlages" prend lui aussi en compte une date de début, une date de fin et une / des famille(s), afin de générer un graphe vous montrant les naissances par période et par famille. Vous avez encore une fois le choix de ne pas restreindre les résultats en indiquant aucune information. </p>
             <br>
-                <p class="para_explication" style="text-align: justify;"> Le graphe "Races" prend en compte une / des race(s) ainsi qu'un pourcentage pour celles-ci. Ces paramètres sont obligatoires afin de pouvoir sélectionner les animaux respectant ces données. </p>
+                <p class="para_explication" style="text-align: justify;"> Le graphe "Races" prend en compte une / des race(s) ainsi qu'un pourcentage pour celles-ci. Ces paramètres sont obligatoires afin de pouvoir sélectionner les animaux respectant ces données. Il faut faire attention à mettre un pourcentage adéquat, une vache ne peut pas dépasser 100% d'elle-même! Il faut donc respecter ceci: Pourcentage Max = 100 / Nombre de Races sélectionnées. </p>
             <br>
                 <p class="para_explication" style="text-align: justify;"> Le graphe "Répartition" montre simplement la répartition mâles / femelles dans la ferme depuis sa création. </p>
             </article>
