--- a/flaskr/templates/graph.html
+++ b/flaskr/templates/graph.html
@@ -30,7 +30,7 @@ Analytics Graph
     </div>
 
     <div id="para2" style="display: none;">
-        Ce grape représente le nombre d'animaux respectant un certains pourcentage de races. Dans ce cas, les vaches doivent appartenir à {% for race in info_data["races"] %} {{ race }}, {% endfor %} avec un pourcentage d'au moins {{ info_data["pourcentage"] }}%. Nous voyons dans ce cas que nous avons {{ info_data["data"][0] }} respectant ces critères pour un total de {{ info_data["somme"] }} vaches. 
+        Ce graphe représente le nombre d'animaux respectant un certain pourcentage de races. Dans ce cas, les vaches doivent appartenir à {% for race in info_data["races"] %} {{ race }}, {% endfor %} avec un pourcentage d'au moins {{ info_data["pourcentage"] }}%. Nous voyons dans ce cas que nous avons {{ info_data["data"][0] }} vaches respectant ces critères pour un total de {{ info_data["somme"] }} vaches. 
     </div>
 
     <div id="para3" style="display: none;">
