--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -246,7 +246,7 @@ La ferme des 3 chênes: Analytics
         </button>
         <br><br>
         {% if no_graph == True %}
-        <h5 style="color: red; text-align: center;" id="error_msg"><i>Il n'y a pas de résultat pour ce graphe, essayez avec d'autres paramêtres!</i></h5>
+        <h5 style="color: red; text-align: center;" id="error_msg"><i>Il n'y a pas de résultats pour ce graphe, veuillez essayer avec d'autres paramètres !</i></h5>
         {% endif %}
     </form>
     
