--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -44,7 +44,7 @@
                 </h2> 
               <br>
               <ul>
-                  <a href="http://www.lafermedestroischenes.be/">Lien vers la ferme des 3 chênes</a>
+                  <a href="http://www.lafermedestroischenes.be/" target="_blank" title="Accéder au site">Lien vers la ferme des 3 chênes</a>
               </ul>
             </div>
             <div class="footer-section contact-form">
@@ -79,7 +79,7 @@
       $("select").select2();
 });
 
-    //Partie Sticky Header
+    //Partie Sticky Header, code repris de https://www.w3schools.com/howto/howto_js_sticky_header.asp"
 
     // Quand l'utilisateur scroll la page, la fonction s'active
     window.onscroll = function() {myFunction()};
